# BlazarEngine

./: .gitignore  .gitmodules  BlazarIncludes.cmake  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  ECS.h  Folder.DotSettings  README.md  build.bat  configure.bat  main.cpp  vcpkg.json
Core/: CMakeLists.txt  Common.h  Constants.h  DynamicMemory.h  Game.h  Time.cpp  Time.h  Utilities.cpp  Utilities.h
Core/BlazarCore/: Common.h  Constants.h  DynamicMemory.h  Logger.cpp  Logger.h  SimpleTree.h  Time.cpp  Time.h  Utilities.cpp  Utilities.h
Core/include/BlazarCore/: Common.h  Constants.h  DynamicMemory.h
Core/src/BlazarCore/: Logger.cpp  Time.cpp  Utilities.cpp
ECS/: CAmbientLight.h  CCollisionObject.h  CCubeMap.h  CDirectionalLight.h  CMakeLists.txt  CMaterial.h  CMesh.h  CPointLight.h  CRigidBody.h  CSpotLight.h  CTransform.h  ECSUtilities.h  IComponent.h  IGameEntity.h  ISystem.h  Renderable.h
ECS/BlazarECS/: CAmbientLight.h  CAnimState.h  CCamera.h  CCollisionObject.h  CCubeMap.h  CDirectionalLight.h  CGameState.h  CInstances.h  CMaterial.h  CMesh.h  COutlined.h  CPointLight.h  CRigidBody.h  CSpotLight.h  CTessellation.h  CTransform.h  ComponentTable.cpp  ComponentTable.h  ECS.h  ECSUtilities.h  IComponent.h  IGameEntity.h  ISystem.h
ECS/include/BlazarECS/: CAnimState.h  CCollisionObject.h  CCubeMap.h  CDirectionalLight.h  CInstances.h  CMaterial.h  CPointLight.h  CRigidBody.h  CTessellation.h  IGameEntity.h  ISystem.h
ECS/src/BlazarECS/: ComponentTable.cpp
Graphics/: BuiltinPrimitives.h  CMakeLists.txt  CameraLoader.cpp  CameraLoader.h  ClientSideLock.h  CommanExecutorArguments.h  CommandExecutor.cpp  CommandExecutor.h  CommonTextures.h  CubeMapLoader.cpp  CubeMapLoader.h  DescriptorManager.cpp  DescriptorManager.h  DrawDescription.h  GLSLShaderSet.cpp  GLSLShaderSet.h  GraphicsException.h  InstanceContext.h  LightLoader.cpp  LightLoader.h  MaterialLoader.cpp  MaterialLoader.h  MeshLoader.cpp  MeshLoader.h  PipelineSelector.h  RenderDevice.cpp  RenderDevice.h  RenderDeviceBuilder.cpp  RenderDeviceBuilder.h  RenderPipeline.cpp  RenderSurface.cpp  RenderSurface.h  RenderUtilities.cpp  RenderUtilities.h  Renderer.cpp  Renderer.h  SCameraLoader.cpp  SCameraLoader.h  SMeshLoader.cpp  SMeshLoader.h  (+12 more)
Graphics/BlazarGraphics/: AnimationStateSystem.cpp  AnimationStateSystem.h  AssetManager.cpp  AssetManager.h  BuiltinPrimitives.h  CameraLoader.cpp  CameraLoader.h  ClientSideLock.h  CommandExecutor.cpp  CommandExecutor.h  CommonTextures.h  CubeMapLoader.cpp  CubeMapLoader.h  DataAttachmentFormatter.cpp  DataAttachmentFormatter.h  DescriptorManager.cpp  DescriptorManager.h  DrawDescription.h  GLSLShaderSet.cpp  GLSLShaderSet.h  GraphicsCommonIncludes.h  GraphicsException.h  IPipelineProvider.h  IRenderDevice.h  IRenderPassProvider.h  IResourceProvider.h  InstanceContext.h  LightLoader.cpp  LightLoader.h  MaterialLoader.cpp  MaterialLoader.h  MeshLoader.cpp  MeshLoader.h  PipelineSelector.h  RenderDevice.cpp  RenderDevice.h  RenderDeviceBuilder.cpp  RenderDeviceBuilder.h  RenderSurface.cpp  RenderSurface.h  (+10 more)
Graphics/BlazarGraphics/RenderGraph/: CommonPasses.cpp  CommonPasses.h  GlobalResourceTable.cpp  GlobalResourceTable.h  GraphSystem.cpp  GraphSystem.h  Pass.h  RenderGraph.cpp  RenderGraph.h  ResourceBinder.cpp  ResourceBinder.h  SearchTex.h  ShaderUniformBinder.cpp  ShaderUniformBinder.h  StaticVars.h
Graphics/BlazarGraphics/VulkanBackend/: CommandExecutorArguments.h  DescriptorManager.cpp  DescriptorManager.h  GLSLShaderSet.cpp  GLSLShaderSet.h  SpirvHelper.cpp  SpirvHelper.h  VmaImplementation.cpp  VulkanCommandExecutor.cpp  VulkanCommandExecutor.h  VulkanContext.h  VulkanCubeMapAllocator.cpp  VulkanCubeMapAllocator.h  VulkanDevice.cpp  VulkanDevice.h  VulkanPipelineProvider.cpp  VulkanPipelineProvider.h  VulkanRenderPassProvider.cpp  VulkanRenderPassProvider.h  VulkanResourceProvider.cpp  VulkanResourceProvider.h  VulkanSamplerAllocator.cpp  VulkanSamplerAllocator.h  VulkanSurface.cpp  VulkanSurface.h  VulkanUtilities.cpp  VulkanUtilities.h
Graphics/include/BlazarGraphics/: AnimationStateSystem.h  AssetManager.h  BuiltinPrimitives.h  DataAttachmentFormatter.h  GraphicsCommonIncludes.h  IPipelineProvider.h  IRenderDevice.h  IRenderPassProvider.h  IResourceProvider.h  IShaderInfo.h  RenderWindow.h
Graphics/src/BlazarGraphics/: AnimationStateSystem.cpp  AssetManager.cpp  DataAttachmentFormatter.cpp
Input/: ActionMap.cpp  ActionMap.h  CMakeLists.txt  EventHandler.cpp  EventHandler.h  GlobalEventHandler.cpp  GlobalEventHandler.h
Input/BlazarInput/: ActionMap.cpp  ActionMap.h  EventHandler.cpp  EventHandler.h  GlobalEventHandler.cpp  GlobalEventHandler.h
Input/include/BlazarInput/: ActionMap.h  EventHandler.h  GlobalEventHandler.h
Input/src/BlazarInput/: ActionMap.cpp  EventHandler.cpp
Physics/: CMakeLists.txt  CollisionShapeInitializer.cpp  CollisionShapeInitializer.h  PhysicsTransformSystem.cpp  PhysicsTransformSystem.h  PhysicsWorld.cpp  PhysicsWorld.h
Physics/BlazarPhysics/: CollisionShapeInitializer.cpp  CollisionShapeInitializer.h  PhysicsTransformSystem.cpp  PhysicsTransformSystem.h  PhysicsWorld.cpp  PhysicsWorld.h
Physics/include/BlazarPhysics/: CollisionShapeInitializer.h  (+2 more)
Samples/: BasicExample.cpp  CMakeLists.txt  SampleCar1.h  SampleCar2.h  SampleCrate.h  SampleCubeMap.h  SampleFloor.h  SampleGame.cpp  SampleGame.h  SampleHouse.h  SampleOldHouse.h  SampleSetupInputBindings.h  SampleSmallCrate.h  SampleTrafficCone.h  Spaceship.h
Samples/BlazarSamples/: FpsCamera.cpp  FpsCamera.h  SampleAnimatedFox.cpp  SampleAnimatedFox.h  SampleAnimatedWolf.h  SampleBall.h  SampleCar1.h  SampleCar2.h  SampleCrate.h  SampleCubeMap.h  SampleFloor.h  SampleGame.cpp  SampleGame.h  SampleGame_Small.cpp  SampleGame_Small.h  SampleHouse.h  SampleMovingCrate.h  SampleOldHouse.h  SampleSetupInputBindings.h  SampleSmallCrate.h  SampleTrafficCone.h  Spaceship.h
Scene/: CMakeLists.txt  Camera.h  FPSCounter.h  FpsCamera.cpp  FpsCamera.h  IPlayable.h  Scene.h  Window.h  World.h
Scene/BlazarScene/: FPSCounter.h  IPlayable.h  Scene.h  Window.h  World.cpp  World.h
(+227 files in other folders)
