CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

SET(VCPKG_MANIFEST_DIR ${CMAKE_CURRENT_SOURCE_DIR})
IF(WIN32)
    SET(VCPKG_TARGET_TRIPLET "x64-windows-static")
ENDIF()
INCLUDE("${CMAKE_CURRENT_SOURCE_DIR}/external/vcpkg/scripts/buildsystems/vcpkg.cmake")

PROJECT(BlazarEngine VERSION 0.2)
INCLUDE("${PROJECT_SOURCE_DIR}/external/vcpkg/scripts/buildsystems/vcpkg.cmake")

OPTION(BUILD_SHARED_LIBS OFF)
OPTION(BLAZAR_INSTALL_LIBS ON)
OPTION(BLAZAR_BUILD_AS_LIB OFF)

SET(CPACK_PACKAGE_VENDOR "BlazarGames")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Blazar 3D Game Engine")
SET(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
SET(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
SET(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})
SET(CPACK_RESOURCE_FILE_README "${PROJECT_SOURCE_DIR}/README.md")
SET(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_SOURCE_DIR}/LICENSE")

INCLUDE(ExternalProject)

INCLUDE(${PROJECT_SOURCE_DIR}/cmake/common.cmake)

SET(BLAZAR_LIB_TYPE STATIC)

IF (BUILD_SHARED_LIBS)
    SET(BLAZAR_LIB_TYPE SHARED)
ENDIF()

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

SET(BLAZAR_LIBS Core ECS Input Graphics Physics Scene Samples)

FOREACH(BLAZAR_L IN LISTS BLAZAR_LIBS)
    ADD_SUBDIRECTORY(${BLAZAR_L})
ENDFOREACH()

IF (BLAZAR_BUILD_AS_LIB)
    ADD_LIBRARY(BlazarEngine ${BLAZAR_LIB_TYPE} main.cpp)
    INSTALL(TARGETS BlazarEngine
            EXPORT BlazarEngine-export
            LIBRARY DESTINATION lib
            ARCHIVE DESTINATION lib)
ELSE()
    ADD_EXECUTABLE(BlazarEngine main.cpp)
    INSTALL(TARGETS BlazarEngine
            EXPORT BlazarEngine-export
            DESTINATION bin/..)
ENDIF()


INSTALL(EXPORT BlazarEngine-export
        FILE BlazarEngineTargets.cmake
        DESTINATION cmake/BlazarEngine
        )

INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/Shaders/ DESTINATION Shaders/)
INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/assets/ DESTINATION assets/)

COPY_TO_BINARY("Shaders" "*.glsl")
COPY_TO_BINARY("assets" "*.*")

TARGET_COMPILE_DEFINITIONS(BlazarEngine PRIVATE _SILENCE_CXX17_ITERATOR_BASE_CLASS_DEPRECATION_WARNING)
TARGET_LINK_LIBRARIES(BlazarEngine PUBLIC BlazarSamples) # Todo use Scene when not building samples

INCLUDE(CPack)
