INCLUDE(${PROJECT_SOURCE_DIR}/cmake/common.cmake)

FIND_PACKAGE(Boost COMPONENTS container REQUIRED)

SET(BlazarECSSources
        src/BlazarECS/ComponentTable.cpp)

ADD_LIBRARY(BlazarECS ${BLAZAR_LIB_TYPE} ${BlazarECSSources})

TARGET_INCLUDE_DEFAULT_DIRECTORIES(BlazarECS)
TARGET_LINK_LIBRARIES(BlazarECS
        PUBLIC
            BlazarCore Boost::container
        )

INSTALL_TARGET(BlazarECS)

SET_TARGET_PROPERTIES(BlazarECS PROPERTIES LINKER_LANGUAGE CXX)